creusot/tests/should_fail/terminates/recursion_through_contract.stderr
error: Mutually recursive functions: when calling `f1`...
  --> recursion_through_contract.rs:13:1
   |
13 | fn f1() -> Int {
   | ^^^^^^^^^^^^^^
   |
note: then `f1` calls `with_proof_assert`...
  --> recursion_through_contract.rs:14:5
   |
14 |     with_proof_assert(5);
   |     ^^^^^^^^^^^^^^^^^^^^
note: finally `with_proof_assert` calls `f1`.
  --> recursion_through_contract.rs:8:14
   |
8  |         x == f1()
   |              ^^^^

error: Mutually recursive functions: when calling `f2`...
  --> recursion_through_contract.rs:23:1
   |
23 | fn f2() -> Int {
   | ^^^^^^^^^^^^^^
   |
note: then `f2` calls `with_requires`...
  --> recursion_through_contract.rs:24:5
   |
24 |     with_requires(5);
   |     ^^^^^^^^^^^^^^^^
note: finally `with_requires` calls `f2`.
  --> recursion_through_contract.rs:19:17
   |
19 | #[requires(x == f2())]
   |                 ^^^^

error: aborting due to 2 previous errors

